force-app/main/default/objects/Product_Line__c.object
<CustomObject>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Avionics - BL 1</fullName>
                </value>
                <value>
                    <fullName>Avionics - BL 2</fullName>
                </value>
                <value>
                    <fullName>Avionics - BL 3</fullName>
                </value>
                <value>
                    <fullName>Electronics - BL 1</fullName>
                </value>
                <value>
                    <fullName>Electronics - BL 2</fullName>
                </value>
                <value>
                    <fullName>Electronics-  BL 3</fullName>
                </value>
                <value>
                    <fullName>Cyb Sec  - BL 1</fullName>
                </value>
                <value>
                    <fullName>Cyb Sec - BL 2</fullName>
                </value>
                <value>
                    <fullName>Cyb Sec - BL 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_field_1__c</fullName>
        <label>Free field 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_field_2__c</fullName>
        <label>Free field 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_field_3__c</fullName>
        <defaultValue>&apos;update from formula&apos;</defaultValue>
        <label>Free field 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avionics</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Cyber Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Family__c</fullName>
        <label>Product Line Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Av-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Av-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Av-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL3-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL3-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL3-PL2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCount__c</fullName>
        <label>TeamCount</label>
        <summaryForeignKey>Product_Line_Team__c.Product_Line__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UniqueKey1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>BL + PL Name + PL Family</description>
        <label>UniqueKey1</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GBU__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Product_Line_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>THA_Team_Share_Reason__c</fullName>
        <label>THA Team Share Reason</label>
    </sharingReasons>
    <validationRules>
        <fullName>BL_required</fullName>
        <active>true</active>
        <description>make business line required field</description>
        <errorConditionFormula>ISPICKVAL( Business_Line__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Business_Line__c</errorDisplayField>
        <errorMessage>Business Line est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GBU_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(GBU__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Business_Line__c</errorDisplayField>
        <errorMessage>GBU est obligatoire</errorMessage>
    </validationRules>
</CustomObject>