force-app/main/default/objects/Product_Line__c/validationRules/BL_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BL_required</fullName>
    <active>true</active>
    <description>make business line required field</description>
    <errorConditionFormula>ISPICKVAL( Business_Line__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Business_Line__c</errorDisplayField>
    <errorMessage>Business Line est obligatoire</errorMessage>
</ValidationRule>