force-app/main/default/objects/Product_Line__c/validationRules/GBU_required.validationRule-meta.xml
<ValidationRule>
    <fullName>GBU_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GBU__c, &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Business_Line__c</errorDisplayField>
    <errorMessage>GBU est obligatoire</errorMessage>
</ValidationRule>