force-app/main/default/objects/Product_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GBU__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Product_Line_Family__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>